--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,14 @@ flutter:
 
   assets:
     - assets/img/people.jpg
+    - assets/img/people2.jpg
+    - assets/img/people3.jpg
+    - assets/img/mountain.jpeg
+    - assets/img/beach.jpeg
+    - assets/img/beach_palm.jpeg
+    - assets/img/mountain_stars.jpeg
+    - assets/img/sunset.jpeg
+    - assets/img/river.jpeg
 
   fonts:
     - family: Lato
